# procon-rust

./: .gitignore  compete.toml  procon-rust.code-workspace
contest/: .gitignore
contest/template/: Cargo.toml  README.md  a.rs  a.rs.bk  f.rs
contest/template/compete.toml/: Cargo.toml
contest/template/src/: common.rs  ex.rs  exmain.rs  fumin.rs  lib.rs  main copy.rs  main.rs  main_test.rs
contest/template/src/capture/: cargo_capture.rs  main.rs
contest/template/src/capture/test/: mod1.rs  mod2.rs  mod3.rs
contest/template/src/ex/: combination.rs  common.rs  dijkstra.rs  fenwick_tree.rs  graph.rs  kruskal.rs  mod.rs  modint.rs  multiset.rs  strings.rs  unionfind.rs  utils.rs
contest/template/src/ex/common/: combination.rs  cumsum.rs  modint.rs  osak.rs  segtree.rs  topological_sort.rs  unionfind.rs  utils.rs
contest/template/src/ex/graph/: dijkstra.rs  euler_tour.rs  fenwick_tree.rs  grapher.rs  hld.rs  kruskal.rs  lca.rs  zero_one_bfs.rs
contest/template/src/ex/strings/: rolling_hash.rs  zalgorithm.rs
contest/template/src/fumin/: arraygrid.rs  beam.rs  bellmanford.rs  bit_set.rs  bounded_sorted_list.rs  combination.rs  compress.rs  cumsum.rs  cumsum2d.rs  dijkstra.rs  doubly_chained_tree.rs  enrich_enum.rs  eratosthenes.rs  euler_tour.rs  fast_bit_set.rs  fast_iset.rs  fast_vec.rs  fenwick_tree.rs  fenwick_tree2d.rs  graph.rs  grapher.rs  grid.rs  grid_v.rs  hld.rs  kmp.rs  kruskal.rs  lazy_segtree.rs  lca.rs  linked_list.rs  matrix.rs  modcombination.rs  modint.rs  multiset.rs  osak.rs  persistent_stack.rs  pig_tail.rs  pt.rs  range_bounds_ex.rs  rev_bheap.rs  rolling_hash.rs  (+16 more)
contest/template/src/lib/: dijkstra.rs  zero_one_bfs.rs
contest/template/src/tests/: main_test.rs
template/: Cargo.toml
tools/: bashrc.sh  cargo_equip.py  cargo_run.sh  (+5 more)
(+28 files in other folders)
