[package]
name = "template"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "cargo-capture"
path = "src/capture/main.rs"

[dependencies]
ac-library-rs = "0.2.0"
alga = "0.9.3"
amplify = "4.9.0"
amplify_derive = "4.0.1"
amplify_num = "0.5.3"
argio = "0.2.0"
ascii = "1.1.0"
az = "1.2.1"
bitset-fixed = "0.1.0"
bitvec = "1.0.1"
bstr = "1.12.0"
btreemultimap = "0.1.1"
counter = "0.7.0"
easy-ext = "1.0.2"
either = "1.15.0"
fixedbitset = "0.5.7"
getrandom = "0.3.3"
glidesort = "0.1.2"
hashbag = "0.1.12"
im-rc = "15.1.0"
indexing = "0.4.1"
indexmap = "2.11.0"
itertools = "0.14.0"
itertools-num = "0.1.3"
lazy_static = "1.5.0"
libm = "0.2.15"
maplit = "1.0.2"
memoise = "0.3.2"
multimap = "0.10.1"
multiversion = "0.8.0"
nalgebra = "0.34.0"
ndarray = "0.16.1"
num = "0.4.3"
num-bigint = "0.4.6"
num-complex = "0.4.6"
num-derive = "0.4.2"
num-integer = "0.1.46"
num-iter = "0.1.45"
num-rational = "0.4.2"
num-traits = "0.2.19"
omniswap = "0.1.0"
once_cell = "1.21.3"
ordered-float = "5.0.0"
pathfinding = "4.14.0"
permutohedron = "0.2.4"
petgraph = "0.8.2"
primal = "0.3.3"
proconio = { version = "=0.5.0", features = ["derive"] }
rand = { version = "=0.9.2", features = ["small_rng"] }
rand_chacha = "0.9.0"
rand_core = "0.9.3"
rand_distr = "0.5.1"
rand_hc = "0.4.0"
rand_pcg = "0.9.0"
rand_xorshift = "0.4.0"
rand_xoshiro = "0.7.0"
recur-fn = "2.2.0"
regex = "1.11.2"
rpds = "1.1.1"
rustc-hash = "2.1.1"
smallvec = "1.15.1"
static_assertions = "1.1.0"
statrs = "0.18.0"
superslice = "1.0.0"
tap = "1.0.1"
text_io = "0.1.13"
thiserror = "2.0.16"
varisat = "0.2.2"

# to be used in capture
id_tree = "1.8.0"
clap = "4.5.53"

[features]
default =["local"]
local = []
